[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/enemy/frog.png" type="Texture" id=1]
[ext_resource path="res://enemy/froggy.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "respirar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "salto_Down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "salto_Up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.15986, 4.34641 )

[node name="froggy" type="KinematicBody2D" groups=[
"enemy",
]]
scale = Vector2( 2.3, 2.3 )
script = ExtResource( 2 )
gravity_power = 750
jump_power = -350
speed = 200

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/respirar = SubResource( 2 )
anims/salto_Down = SubResource( 3 )
anims/salto_Up = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.547735, 1.87192 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]

[node name="jumpTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="jumpTimer" to="." method="_on_jumpTimer_timeout"]
